--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #3F5873;
 }
